[package]
name = "test-raspberry-video"
version = "0.1.0"
repository = "https://github.com/den-taku/test-raspberry-video"
description = ""
# homepage = ""
# documentation = "" # Maybe needless
# categories = [""]
# keywords = [""]
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rpi-video-rs = "0.0.2"

[profile.release]
strip = "debuginfo"
